Port redesigned filter configuration GUI